--- a/app/src/main/res/layout/activity_main13.xml
+++ b/app/src/main/res/layout/activity_main13.xml
@@ -84,7 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/but_11"
+                    android:src="@drawable/but_12"
                     android:transitionName="5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_slab"
                     android:text="Name"
-                    android:textColor="@color/groen"
+                    android:textColor="@color/blauw"
                     android:textSize="48dp"
                     android:transitionName="6"
                     app:layout_constraintBottom_toBottomOf="@id/image_2"
@@ -108,7 +108,7 @@
                     android:id="@+id/edit_text_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/but_12"
+                    android:background="@drawable/but_11"
                     android:gravity="center"
                     android:hint="name here"
                     android:inputType="text"
@@ -131,7 +131,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/but_11"
+                    android:src="@drawable/but_12"
                     android:transitionName="8"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -143,7 +143,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_slab"
                     android:text="Maker"
-                    android:textColor="@color/groen"
+                    android:textColor="@color/blauw"
                     android:textSize="48dp"
                     android:transitionName="9"
                     app:layout_constraintBottom_toBottomOf="@id/image_3"
@@ -155,7 +155,7 @@
                     android:id="@+id/edit_text_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/but_12"
+                    android:background="@drawable/but_11"
                     android:gravity="center"
                     android:hint="maker here"
                     android:inputType="text"
@@ -178,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/but_11"
+                    android:src="@drawable/but_12"
                     android:transitionName="11"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -190,7 +190,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_slab"
                     android:text="calories/100ml"
-                    android:textColor="@color/groen"
+                    android:textColor="@color/blauw"
                     android:textSize="46dp"
                     android:transitionName="12"
                     app:layout_constraintBottom_toBottomOf="@id/image_4"
@@ -202,7 +202,7 @@
                     android:id="@+id/edit_text_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/but_12"
+                    android:background="@drawable/but_11"
                     android:gravity="center"
                     android:hint="calories/100ml here"
                     android:inputType="number"
