--- a/app/src/main/res/layout/activity_main15.xml
+++ b/app/src/main/res/layout/activity_main15.xml
@@ -84,7 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:src="@drawable/but_11"
+                    android:src="@drawable/but_12"
                     android:transitionName="5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_slab"
                     android:text="Weight"
-                    android:textColor="@color/groen"
+                    android:textColor="@color/blauw"
                     android:textSize="48dp"
                     android:transitionName="6"
                     app:layout_constraintBottom_toBottomOf="@id/image_2"
@@ -108,7 +108,7 @@
                     android:id="@+id/edit_text_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/but_12"
+                    android:background="@drawable/but_11"
                     android:gravity="center"
                     android:hint="name here"
                     android:inputType="number"
