--- a/app/src/main/res/layout/activity_main14.xml
+++ b/app/src/main/res/layout/activity_main14.xml
@@ -85,7 +85,7 @@ android:background="@drawable/background_1">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/but_11"
+                android:src="@drawable/but_12"
                 android:transitionName="5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -97,7 +97,7 @@ android:background="@drawable/background_1">
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_slab"
                 android:text="Name"
-                android:textColor="@color/groen"
+                android:textColor="@color/blauw"
                 android:textSize="48dp"
                 android:transitionName="6"
                 app:layout_constraintBottom_toBottomOf="@id/image_2"
@@ -109,7 +109,7 @@ android:background="@drawable/background_1">
                 android:id="@+id/edit_text_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/but_12"
+                android:background="@drawable/but_11"
                 android:gravity="center"
                 android:hint="name here"
                 android:inputType="text"
@@ -132,7 +132,7 @@ android:background="@drawable/background_1">
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/but_11"
+                android:src="@drawable/but_12"
                 android:transitionName="8"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -144,7 +144,7 @@ android:background="@drawable/background_1">
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roboto_slab"
                 android:text="Calories"
-                android:textColor="@color/groen"
+                android:textColor="@color/blauw"
                 android:textSize="48dp"
                 android:transitionName="9"
                 app:layout_constraintBottom_toBottomOf="@id/image_3"
@@ -156,7 +156,7 @@ android:background="@drawable/background_1">
                 android:id="@+id/edit_text_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/but_12"
+                android:background="@drawable/but_11"
                 android:gravity="center"
                 android:hint="Calories here"
                 android:inputType="number"
